--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SatelliteTracker</string>
+    <string name="active">Active</string>
+    <string name="passive">Passive</string>
 </resources>
