list search operation implemented with an optimization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SatelliteTracker</string>
     <string name="active">Active</string>
     <string name="passive">Passive</string>
+    <string name="search">Search</string>
 </resources>
