--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="id_error">ID not found in the JSON file</string>
     <string name="height_mass">Height/Mass:%s</string>
     <string name="cost">Cost:%s</string>
-    <string name="last_position" formatted="true">Last Position: (</string>
+    <string name="last_position">Last Position: (%.9f,%.9f)</string>
 </resources>
